# databonsai

./: .gitignore  .readthedocs.yaml  LICENSE  README copy.md  README.md  pyproject.toml  setup.py
databonsai/: CONTRIBUTING.MD
databonsai/categorize/: __init__.py  base_categorizer.py  multi_categorizer.py
databonsai/docs/: AnthropicProvider.md  BaseCategorizer.md  BaseTransformer.md  MultiCategorizer.md  OpenAIProvider.md  requirements.txt
databonsai/docs/source/source/: DecomposeTransformer.md  conf.py  index.rst
databonsai/examples/: categorize_news.ipynb
databonsai/llm_providers/: __init__.py  anthropic_provider.py  llm_provider.py  ollama_provider.py  openai_provider.py
databonsai/transform/: __init__.py  base_transformer.py  decompose_transformer.py  extract_transformer.py
databonsai/utils/: __init__.py  apply.py  logs.py
docs/: AnthropicProvider.md  BaseCategorizer.md  BaseTransformer.md  DecomposeTransformer.md  ExtractTransformer.md  MultiCategorizer.md  OllamaProvider.md  OpenAIProvider.md  Utils.md  requirements.txt
docs/source/: conf.py  databonsai.rst  databonsai.utils.rst  index.rst  modules.rst
source/: databonsai.categorize.rst  databonsai.llm_providers.rst  databonsai.transform.rst  modules.rst
tests/: test_categorization.py
